# plotly-calheatmap

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  setup.cfg
.claude/: settings.local.json
.github/workflows/: ci.yaml  publish.yaml
.serena/: project.yml
docs/: API.md
examples/: aggregation.py  annotations.py  calendar_layout.py  colorscale_types.py  custom_grouping.py  dataset_swap.py  github_contributions.py  hourly_dataset_swap.py  hourly_heatmap.py  legend_customization.py  log_scale_with_legend.py  multi_layer.py  plotly_fig_show.py  streamlit_fig.py  vertical_orientation.py  week_start_day.py
plotly_calheatmap/: __init__.py  calendar_calheatmap.py  calheatmap.py  calplot.py  colorscale_utils.py  date_extractors.py  hourly_calheatmap.py  i18n.py  layout_formatter.py  raw_heatmap.py  single_year_calheatmap.py  single_year_calplot.py  utils.py
tests/: test_calheatmap.py  test_calplot.py  test_colorscale_utils.py  test_date_extractors.py  test_hourly_calheatmap.py  test_i18n.py  test_layout_formatter.py  test_month_calheatmap.py  test_month_calplot.py  test_raw_heatmap.py  test_single_year_calheatmap.py  test_single_year_calplot.py  test_utils.py
