[tool.poetry]
name = "plotly_calheatmap"
version = "0.1.20"
description = "Calendar Plot made with Plotly"
authors = ["Bruno Rodrigues Silva <b.rosilva1@gmail.com>"]
license = "MIT"
repository = "https://github.com/brunorosilva/plotly-calplot"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
plotly = ">=5.4.0"
pandas = "*"
numpy = ">=1.22.3"
pytz = "*"
babel = ">=2.10.0"

[tool.poetry.group.dev.dependencies]
black = "^21.12b0"
isort = "^5.10.1"
streamlit = "^1.3.0"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
flake8 = "^4.0.1"
vulture = "^2.3"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
