[tool.poetry]
name = "plotly_calheatmap"
version = "0.5"
description = "Calendar Plot made with Plotly"
authors = ["Bruno Rodrigues Silva <b.rosilva1@gmail.com>", "Thomaz Yuji Baba <thomaz.yuji@gmail.com"]
license = "MIT"
repository = "https://github.com/thomazyujibaba/plotly-calheatmap"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
plotly = ">=5.4.0"
pandas = "*"
numpy = ">=1.24.0"
pytz = "*"
babel = ">=2.10.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.0"
isort = ">=5.10.1"
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
flake8 = ">=6.0"
vulture = ">=2.3"
mypy = ">=1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
